<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_thin"
            android:padding="10dp"
            />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/icon_acccount_circle"/>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:id="@+id/login_email_input"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/login_password_input"
            />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/poppins_thin"
            android:backgroundTint="@color/white"
            android:textColor="@color/blue"
            android:padding="10dp"
            android:layout_margin="40dp"
            android:layout_marginTop="32sp"
            android:textSize="25sp"
            android:id="@+id/login_btn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_thin"
            android:backgroundTint="@color/blue"
            android:textSize="15sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>