<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <FrameLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/lightBlue"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center"
                android:padding="16dp">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/home"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/home"
                    android:padding="8dp"
                    />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/search"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/search"
                    android:padding="8dp"
                    />

                <ImageButton
                    android:id="@+id/iconButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/list"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/list"
                    android:padding="8dp"
                    />

            </LinearLayout>

        </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>