<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Bottom navigation menu -->
    <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightBlue" />

            <LinearLayout
                android:id="@+id/bottom_menu"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@color/background"
                android:weightSum="3"
                android:padding="8dp">

                <!-- Button that takes you to the homepage -->
                <ImageButton
                    android:id="@+id/button_homepage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/home"
                    android:scaleType="centerInside"
                    android:padding="10dp"
                    android:contentDescription="@string/home"
                    app:tint="@color/white" />

                <!-- Button to open the search bar  -->
                <ImageButton
                    android:id="@+id/button_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/search"
                    android:scaleType="centerInside"
                    android:padding="10dp"
                    android:contentDescription="@string/search"
                    app:tint="@color/white"/>

                <!-- Button that takes you to the homepage -->
                <ImageButton
                    android:id="@+id/button_watchlist"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/list"
                    android:scaleType="centerInside"
                    android:padding="10dp"
                    android:contentDescription="@string/list"
                    app:tint="@color/white"/>
            </LinearLayout>

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>